<resources>
	<string name="app_name" translatable="false">Conversations (Debug)</string>
	<string name="action_settings">Settings</string>
	<string name="action_add">New conversation</string>
	<string name="action_accounts">Manage accounts</string>
	<string name="action_end_conversation">End this conversation</string>
	<string name="action_contact_details">Contact details</string>
	<string name="action_muc_details">Conference details</string>
	<string name="action_secure">Secure conversation</string>
	<string name="action_add_account">Add account</string>
	<string name="action_edit_contact">Edit name</string>
	<string name="action_add_phone_book">Add to address book</string>
	<string name="action_delete_contact">Delete from roster</string>
	<string name="action_block_contact">Block contact</string>
	<string name="action_unblock_contact">Unblock contact</string>
	<string name="action_block_domain">Block domain</string>
	<string name="action_unblock_domain">Unblock domain</string>
	<string name="title_activity_manage_accounts">Manage Accounts</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_activity_conference_details">Conference Details</string>
	<string name="title_activity_contact_details">Contact Details</string>
	<string name="title_activity_sharewith">Share with Conversation</string>
	<string name="title_activity_start_conversation">Start Conversation</string>
	<string name="title_activity_choose_contact">Choose contact</string>
	<string name="title_activity_block_list">Block list</string>
	<string name="just_now">just now</string>
	<string name="minute_ago">1 min ago</string>
	<string name="minutes_ago">%d mins ago</string>
	<string name="unread_conversations">unread Conversations</string>
	<string name="sending">sending…</string>
	<string name="message_decrypting">Decrypting message. Please wait…</string>
	<string name="pgp_message">OpenPGP encrypted message</string>
	<string name="nick_in_use">Nickname is already in use</string>
	<string name="admin">Admin</string>
	<string name="owner">Owner</string>
	<string name="moderator">Moderator</string>
	<string name="participant">Participant</string>
	<string name="visitor">Visitor</string>
	<string name="remove_contact_text">Would you like to remove %s from your roster? The conversation associated with this contact will not be removed.</string>
	<string name="block_contact_text">Would you like to block %s from sending you messages?</string>
	<string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
	<string name="block_domain_text">Block all contacts from %s?</string>
	<string name="unblock_domain_text">Unblock all contacts from %s?</string>
	<string name="contact_blocked">Contact blocked</string>
	<string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
	<string name="register_account">Register new account on server</string>
	<string name="change_password_on_server">Change password on server</string>
	<string name="share_with">Share with…</string>
	<string name="start_conversation">Start Conversation</string>
	<string name="invite_contact">Invite Contact</string>
	<string name="contacts">Contacts</string>
	<string name="cancel">Cancel</string>
	<string name="set">Set</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="block">Block</string>
	<string name="unblock">Unblock</string>
	<string name="save">Save</string>
	<string name="ok">OK</string>
	<string name="crash_report_title">Conversations has crashed</string>
	<string name="crash_report_message">By sending in stack traces you are helping the ongoing development of Conversations\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
	<string name="send_now">Send now</string>
	<string name="send_never">Never ask again</string>
	<string name="problem_connecting_to_account">Unable to connect to account</string>
	<string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
	<string name="touch_to_fix">Touch here to manage your accounts</string>
	<string name="attach_file">Attach file</string>
	<string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
	<string name="add_contact">Add contact</string>
	<string name="send_failed">delivery failed</string>
	<string name="send_rejected">rejected</string>
	<string name="preparing_image">Preparing image for transmission</string>
	<string name="preparing_images">Preparing images for transmission</string>
	<string name="sharing_files_please_wait">Sharing files. Please wait…</string>
	<string name="action_clear_history">Clear history</string>
	<string name="clear_conversation_history">Clear Conversation History</string>
	<string name="clear_histor_msg">Do you want to delete all messages within this Conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
	<string name="delete_messages">Delete messages</string>
	<string name="also_end_conversation">End this conversation afterwards</string>
	<string name="choose_presence">Choose device</string>
	<string name="send_unencrypted_message">Send unencrypted message</string>
	<string name="send_message">Send message</string>
	<string name="send_message_to_x">Send message to %s</string>
	<string name="send_otr_message">Send OTR encrypted message</string>
	<string name="send_omemo_message">Send OMEMO encrypted message</string>
	<string name="send_omemo_x509_message">Send v\\OMEMO encrypted message</string>
	<string name="send_pgp_message">Send OpenPGP encrypted message</string>
	<string name="your_nick_has_been_changed">Your nickname has been changed</string>
	<string name="send_unencrypted">Send unencrypted</string>
	<string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
	<string name="openkeychain_required">OpenKeychain</string>
	<string name="openkeychain_required_long">Conversations utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Conversations afterwards.)</small></string>
	<string name="restart">Restart</string>
	<string name="install">Install</string>
	<string name="openkeychain_not_installed">Please install OpenKeychain</string>
	<string name="offering">offering…</string>
	<string name="waiting">waiting…</string>
	<string name="no_pgp_key">No OpenPGP Key found</string>
	<string name="contact_has_no_pgp_key">Conversations is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
	<string name="no_pgp_keys">No OpenPGP Keys found</string>
	<string name="contacts_have_no_pgp_keys">Conversations is unable to encrypt your messages because your contacts are not announcing their public key.\n\n<small>Please ask your contacts to setup OpenPGP.</small></string>
	<string name="pref_general">General</string>
	<string name="pref_xmpp_resource">XMPP resource</string>
	<string name="pref_xmpp_resource_summary">The name this client identifies itself with</string>
	<string name="pref_accept_files">Accept files</string>
	<string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
	<string name="pref_attachments">Attachments</string>
	<string name="pref_return_to_previous">Quick Sharing</string>
	<string name="pref_return_to_previous_summary">Immediately return to previous activity instead of opening the conversation after sharing something</string>
	<string name="pref_notification_settings">Notification</string>
	<string name="pref_notifications">Notifications</string>
	<string name="pref_notifications_summary">Notify when a new message arrives</string>
	<string name="pref_vibrate">Vibrate</string>
	<string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
	<string name="pref_led">LED Notification</string>
	<string name="pref_led_summary">Blink notification light when a new message arrives</string>
	<string name="pref_sound">Ringtone</string>
	<string name="pref_sound_summary">Play sound when a new message arrives</string>
	<string name="pref_notification_grace_period">Grace Period</string>
	<string name="pref_notification_grace_period_summary">The length of time Conversations keeps quiet after seeing activity on another device</string>
	<string name="pref_advanced_options">Advanced</string>
	<string name="pref_never_send_crash">Never send crash reports</string>
	<string name="pref_never_send_crash_summary">By sending in stack traces you are helping the ongoing development of Conversations</string>
	<string name="pref_confirm_messages">Confirm Messages</string>
	<string name="pref_confirm_messages_summary">Let your contacts know when you have received and read their messages</string>
	<string name="pref_ui_options">UI</string>
	<string name="openpgp_error">OpenKeychain reported an error</string>
	<string name="error_decrypting_file">I/O Error decrypting file</string>
	<string name="accept">Accept</string>
	<string name="error">An error has occurred</string>
	<string name="pref_grant_presence_updates">Grant presence updates</string>
	<string name="pref_grant_presence_updates_summary">Preemptively grant and request presence subscriptions for contacts you have created</string>
	<string name="subscriptions">Subscriptions</string>
	<string name="your_account">Your account</string>
	<string name="keys">Keys</string>
	<string name="send_presence_updates">Send presence updates</string>
	<string name="receive_presence_updates">Receive presence updates</string>
	<string name="ask_for_presence_updates">Ask for presence updates</string>
	<string name="attach_choose_picture">Choose picture</string>
	<string name="attach_take_picture">Take picture</string>
	<string name="preemptively_grant">Preemptively grant subscription request</string>
	<string name="error_not_an_image_file">The file you selected is not an image</string>
	<string name="server_info_show_more">Server info</string>
	<string name="search">Search</string>
	<string name="create_contact">Create Contact</string>
	<string name="join_conference">Join Conference</string>
	<string name="save_as_bookmark">Save as bookmark</string>
	<string name="delete_bookmark">Delete bookmark</string>
	<string name="action_edit_subject">Edit conference subject</string>
	<string name="disable_notifications">Disable notifications</string>
	<string name="scan_qr_code">Scan 2D Barcode</string>
	<string name="show_qr_code">Show 2D Barcode</string>
	<string name="show_block_list">Show block list</string>
	<string name="enable_notifications">Enable notifications</string>
	<string name="change_password">Change password</string>
	<string name="enable_all_accounts">Enable all accounts</string>
	<string name="disable_all_accounts">Disable all accounts</string>
	<string name="advanced_mode">Advanced mode</string>
	<string name="hide_offline">Hide offline</string>
	<string name="action_add_account_with_certificate">Add account with certificate</string>
	<string name="mam_prefs">Archiving preferences</string>
	<string name="action_renew_certificate">Renew certificate</string>
	<string name="share_uri_with">Share URI with…</string>
	<string name="change_presence">Change Presence</string>
	<string name="show_password">Show password</string>
	<string name="create_conference">Create conference</string>
	<string name="join_or_create_conference">Join or create conference</string>
	<string name="share_as_barcode">Share as Barcode</string>
	<string name="share_as_uri">Share as XMPP URI</string>
	<string name="share_as_http">Share as HTTP link</string>
</resources>