<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_share"
        android:title="@string/share_uri_with"
        android:icon="?attr/icon_share"
        compat:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_share_barcode"
                android:title="@string/share_as_barcode"/>
            <item
                android:id="@+id/action_share_uri"
                android:title="@string/share_as_uri"/>
            <item android:id="@+id/action_share_http"
                android:title="@string/share_as_http"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_change_presence"
        compat:showAsAction="always"
        android:title="@string/change_presence"
        android:icon="@drawable/ic_announcement_white_24dp"/>

    <item
        android:id="@+id/action_show_qr_code"
        compat:showAsAction="never"
        android:title="@string/show_qr_code"/>

    <item
        android:id="@+id/action_show_block_list"
        compat:showAsAction="never"
        android:title="@string/show_block_list"/>

    <item
        android:id="@+id/action_renew_certificate"
        compat:showAsAction="never"
        android:title="@string/action_renew_certificate"
        android:visible="false"/>

    <item
        android:id="@+id/action_server_info_show_more"
        android:checkable="true"
        android:checked="false"
        compat:showAsAction="never"
        android:title="@string/server_info_show_more"/>

    <item
        android:id="@+id/action_mam_prefs"
        android:title="@string/mam_prefs"/>

    <item
        android:id="@+id/action_show_password"
        compat:showAsAction="never"
        android:title="@string/show_password"/>

    <item
        android:id="@+id/action_change_password_on_server"
        compat:showAsAction="never"
        android:title="@string/change_password"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        compat:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>
