<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_security"
        android:icon="?attr/icon_not_secure"
        android:orderInCategory="20"
        compat:showAsAction="always"
        android:title="@string/action_secure"/>
    <item
        android:id="@+id/action_attach_file"
        android:icon="?attr/icon_new_attachment"
        android:orderInCategory="30"
        compat:showAsAction="always"
        android:title="@string/attach_file"/>
    <item
        android:id="@+id/action_contact_details"
        android:orderInCategory="40"
        compat:showAsAction="never"
        android:title="@string/action_contact_details"/>
    <item
        android:id="@+id/action_muc_details"
        android:icon="?attr/icon_group"
        android:orderInCategory="40"
        compat:showAsAction="ifRoom"
        android:title="@string/action_muc_details"/>
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="45"
        compat:showAsAction="never"
        android:title="@string/invite_contact"/>
    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="50"
        compat:showAsAction="never"
        android:title="@string/action_clear_history"/>
    <item
        android:id="@+id/action_archive"
        android:orderInCategory="60"
        compat:showAsAction="never"
        android:title="@string/action_end_conversation"/>
    <item
        android:id="@+id/action_mute"
        android:orderInCategory="70"
        compat:showAsAction="never"
        android:title="@string/disable_notifications"/>

    <item
        android:id="@+id/action_unmute"
        android:orderInCategory="71"
        compat:showAsAction="never"
        android:title="@string/enable_notifications"/>

    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        compat:showAsAction="never"
        android:title="@string/action_accounts"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        compat:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>