<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        compat:actionLayout="@layout/actionview_search"
        android:icon="?attr/icon_search"
        compat:showAsAction="collapseActionView|always"
        android:title="@string/search" />
    <item
        android:id="@+id/action_create_contact"
        android:icon="?attr/icon_add_person"
        compat:showAsAction="always"
        android:title="@string/create_contact" />
    <item
        android:id="@+id/action_conference"
        android:icon="?attr/icon_add_group"
        compat:showAsAction="always"
        android:title="@string/join_or_create_conference">
        <menu>
            <item
                android:id="@+id/action_join_conference"
                android:title="@string/join_conference"/>
            <item
                android:id="@+id/action_create_conference"
                android:title="@string/create_conference"/>

        </menu>
    </item>
    <item
        android:id="@+id/action_scan_qr_code"
        compat:showAsAction="never"
        android:title="@string/scan_qr_code" />

    <item
        android:id="@+id/action_hide_offline"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="85"
        compat:showAsAction="never"
        android:title="@string/hide_offline"/>
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        compat:showAsAction="never"
        android:title="@string/action_accounts" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        compat:showAsAction="never"
        android:title="@string/action_settings" />

</menu>
