<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_contact"
        android:icon="?attr/icon_edit"
        android:orderInCategory="10"
        compat:showAsAction="always"
        android:title="@string/action_edit_contact"/>

    <item
        android:id="@+id/action_share"
        android:icon="?attr/icon_share"
        compat:showAsAction="always"
        android:orderInCategory="15"
        android:title="@string/share_uri_with"/>
    <item
        android:id="@+id/action_delete_contact"
        android:orderInCategory="10"
        compat:showAsAction="never"
        android:title="@string/action_delete_contact"/>

    <item
        android:id="@+id/action_block"
        android:orderInCategory="72"
        compat:showAsAction="never"
        android:title="@string/action_block_contact"/>

    <item
        android:id="@+id/action_unblock"
        android:orderInCategory="73"
        compat:showAsAction="never"
        android:title="@string/action_unblock_contact"/>

    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        compat:showAsAction="never"
        android:title="@string/action_accounts"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        compat:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
