<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_subject"
        android:icon="?attr/icon_edit"
        android:orderInCategory="10"
        compat:showAsAction="always"
        android:title="@string/action_edit_subject"/>
    <item
        android:id="@+id/action_share"
        android:icon="?attr/icon_share"
        compat:showAsAction="always"
        android:orderInCategory="15"
        android:title="@string/share_uri_with"/>

    <item
        android:id="@+id/action_save_as_bookmark"
        android:orderInCategory="80"
        compat:showAsAction="never"
        android:title="@string/save_as_bookmark"/>
    <item
        android:id="@+id/action_delete_bookmark"
        android:orderInCategory="80"
        compat:showAsAction="never"
        android:title="@string/delete_bookmark"/>
    <item
        android:id="@+id/action_advanced_mode"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="85"
        compat:showAsAction="never"
        android:title="@string/advanced_mode"/>
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        compat:showAsAction="never"
        android:title="@string/action_accounts"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        compat:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
