<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_add_account"
		android:icon="?attr/icon_add_person"
		compat:showAsAction="always"
		android:title="@string/action_add_account"/>
	<item
		android:id="@+id/action_add_account_with_cert"
		compat:showAsAction="never"
		android:icon="?attr/icon_add_person"
		android:title="@string/action_add_account_with_certificate"
		android:visible="true"/>
	<item
		android:id="@+id/action_enable_all"
		android:title="@string/enable_all_accounts"/>
	<item
		android:id="@+id/action_disable_all"
		android:title="@string/disable_all_accounts"/>
	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		compat:showAsAction="never"
		android:title="@string/action_settings"/>

</menu>
